jumbotron added.  Text edits

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         
     </head>
 
@@ -26,9 +27,15 @@
 
         <nav>
             <div class="container">
-                <a href="#">
-                    <span id="logo">db</span>
-                </a>
+                <div id="brand">
+                    <a href="#">
+                        <span id="logo">db</span>
+                    </a>
+                    <div id="tagline">
+                        <div>Dave Bennett</div>
+                        <div>Front-end Developer</div>
+                    </div>
+                </div>
                 <div id="linksContainer">
                     <a href="#" class="navLink">About</a>
                     <a href="#" class="navLink">Projects</a>
@@ -46,6 +53,13 @@
                 </div>
             </div>
         </nav>
+        <div class="jumbo">
+            <div id="headline">
+                <h2>Front-end Web Development</h2>
+                <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;Query&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
+            </div>
+        </div>
+
 
 
 
