Background image added.  Small fixes to nav

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;Query&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
             </div>
         </div>
+        <section id="aboutme">
+            I'm a web developer from Luton in the UK.  I'm passionate about coding and enjoy creating  
+        </section>
 
 
 
