Projects added. Navbar fadeIn added.

--- a/index.html
+++ b/index.html
@@ -57,14 +57,46 @@
             <div id="headline">
                 <h2>Front-end Web Development</h2>
                 <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;Query&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
+                <p id="aboutme">I'm a web developer from Luton in the UK.  I'm passionate about coding and enjoy creating beautiful, responsive web apps.</p>
             </div>
         </div>
-        <section id="aboutme">
-            I'm a web developer from Luton in the UK.  I'm passionate about coding and enjoy creating  
-        </section>
 
-
-
+        <div id="myProjects">
+            <div class="project">
+            <div class="projectImg">
+                <img src="./images/coopers_screen.png" alt="Coopers Cricket Club Website">
+            </div>
+            <div class="projectText">
+                <h3>Ashridge Coopers Cricket Club website</h3>
+                <p>A website for my local cricket club.  Created using Bootstrap with HTML, CSS and jQuery. Angular was then added to enable easier updating of fixtures and statistics (and because I wnated to use it somewhere!).  Hosted on Digital Ocean using Apache.</p>
+                <div class="skillsContainer">
+                    <div class="skill">HTML</div>
+                    <div class="skill">CSS</div>
+                    <div class="skill">JavaScript</div>
+                    <div class="skill">jQuery</div>
+                    <div class="skill">Angular</div>
+                    <div class="skill">Bootstrap</div>
+                </div>
+            </div>
+            </div>
+            <div class="project">
+            <div class="projectImg">
+                <img src="./images/coopers_screen.png" alt="Coopers Cricket Club Website">
+            </div>
+            <div class="projectText">
+                <h3>Ashridge Coopers Cricket Club website</h3>
+                <p>A website for my local cricket club.  Created using Bootstrap with HTML, CSS and jQuery. Angular was then added to enable easier updating of fixtures and statistics (and because I wnated to use it somewhere!).  Hosted on Digital Ocean using Apache.</p>
+                <div class="skillsContainer">
+                    <div class="skill">HTML</div>
+                    <div class="skill">CSS</div>
+                    <div class="skill">JavaScript</div>
+                    <div class="skill">jQuery</div>
+                    <div class="skill">Angular</div>
+                    <div class="skill">Bootstrap</div>
+                </div>
+            </div>
+            </div>
+        </div>
 
     </body>
     <!-- My scripts -->
