--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <div id="headline">
                 <h2>Front-end Web Development</h2>
                 <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;jQuery&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
-                <p id="aboutme">I'm a web developer from Luton in the UK.  I'm passionate about coding and enjoy creating beautiful, responsive web apps.</p>
+                <p id="aboutme">I'm a web developer from Luton in the UK.
+                    <br>
+                  I'm passionate about coding and enjoy creating beautiful, responsive web apps.</p>
             </div>
         </div>
 
@@ -157,7 +159,7 @@
                             <i class="fa fa-external-link" aria-hidden="true"></i>
                         </h3>
                     </a>
-                    <p>An app that displays the user's operating system, language and IP address. Built as part of FreeCodeCamps back-end certificate.  Hosted on Heroku.</p>
+                    <p>An app that displays the user's operating system, language and IP address. Built as part of FreeCodeCamps back-end certificate and hosted on Heroku.</p>
                     <div class="skillsContainer">
                         <div class="skill">Node</div>
                     </div>
