--- a/index.html
+++ b/index.html
@@ -53,15 +53,21 @@
             <div id="headline">
                 <h2>Front-end Web Development</h2>
                 <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;jQuery&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
-                <p id="aboutme">I'm a web developer from Luton in the UK.
+                <p id="aboutme">I'm a web developer from near Luton in the UK.
                     <br>
                   I'm passionate about coding and enjoy creating beautiful, responsive web apps.</p>
             </div>
         </div>
 
-        <h2>My Projects</h2>
+        <div id="aboutme">
+            <h2>About me</h2>
+            <h4>Who am I?</h4>
+            <p>I'm a self taught developer currently working in the print industry.</p>
+        </div>       
 
-        <div id="myProjects">           
+        <div id="myProjects">  
+
+            <h2>My Projects</h2>         
             
             <div class="project">
                 <div class="projectImg">
@@ -69,7 +75,7 @@
                 </div>
                 <div class="projectText">
                     <a href="http://www.cooperscricket.co.uk" target="_blank">
-                        <h3>Ashridge Coopers Cricket Club website
+                        <h3>Ashridge Coopers CC website
                             <i class="fa fa-external-link" aria-hidden="true"></i>
                         </h3>
                     </a>
@@ -159,7 +165,7 @@
                             <i class="fa fa-external-link" aria-hidden="true"></i>
                         </h3>
                     </a>
-                    <p>An app that displays the user's operating system, language and IP address. Built as part of FreeCodeCamps back-end certificate and hosted on Heroku.</p>
+                    <p>An app that displays the user's operating system, language and IP address. Built as part of FreeCodeCamp's back-end certificate and hosted on Heroku.</p>
                     <div class="skillsContainer">
                         <div class="skill">Node</div>
                     </div>
