Still refactoring code...

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        
+
     </head>
 
     <body>
@@ -46,7 +46,7 @@
                     <a href="http://codepen.io/db001/" target="_blank" class="navLink">
                         <img src="./images/codepen_inverse.png" alt="code pen">
                     </a>
-                </div>                
+                </div>
             </div>
         </nav>
         <div class="jumbo">
@@ -62,13 +62,15 @@
         <div id="aboutme">
             <h2>About me</h2>
             <h4>Who am I?</h4>
-            <p>I'm a self taught developer currently working in the print industry.</p>
-        </div>       
+            <p>I'm a self taught developer currently working in the print industry.  I've been coding for almost 2 years and enjoy seeing my code come to life on screen.</p>
+        </div>
 
-        <div id="myProjects">  
+        <section>
 
-            <h2>My Projects</h2>         
-            
+            <h2>My Projects</h2>
+
+            <div id="myProjects">
+
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/coopers_screen.png" alt="Coopers Cricket Club Website">
@@ -173,6 +175,7 @@
             </div>
 
         </div> <!-- End of projects -->
+      </section>
 
     </body>
     <!-- My scripts -->
