--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     </head>
@@ -59,11 +58,15 @@
             </div>
         </div>
 
+        <section>
+
         <div id="aboutme">
             <h2>About me</h2>
             <h4>Who am I?</h4>
-            <p>I'm a self taught developer currently working in the print industry.  I've been coding for almost 2 years and enjoy seeing my code come to life on screen.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+
+        </section>
 
         <section>
 
