--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
         <!-- Font Awesome -->
         <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"
-
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+     
 
     </head>
 
@@ -62,7 +59,6 @@
 
         <div id="aboutme">
             <h2>About me</h2>
-            <h4>Who am I?</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
@@ -71,8 +67,6 @@
         <section>
 
             <h2>My Projects</h2>
-
-            <div id="myProjects">
 
             <div class="project">
                 <div class="projectImg">
@@ -95,6 +89,8 @@
                     </div>
                 </div>
             </div>
+            
+            <hr>
 
             <div class="project">
                 <div class="projectImg">
@@ -117,6 +113,8 @@
                 </div>
             </div>
 
+            <hr>
+
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/timestamp.png" alt="Timestamp Microservice">
@@ -137,6 +135,8 @@
                     </div>
                 </div>
             </div>
+
+            <hr>
 
             <div class="project">
                 <div class="projectImg">
@@ -160,6 +160,8 @@
                 </div>
             </div>
 
+            <hr>
+
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/header_parser.png" alt="HTTP Header Parsing Site">
@@ -177,7 +179,7 @@
                 </div>
             </div>
 
-        </div> <!-- End of projects -->
+<!-- End of projects -->
       </section>
 
     </body>
