--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div id="aboutme">
             <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I am a self taught coder and web developer, and have been learning for just over a year.  It started with programming course in Python and has grown from there, using resources such as <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>, <a href="https://www.coursera.org/">Coursera</a> and <a href="https://www.edx.org/">edX</a>.  I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning and utilising skills such as Angular, SASS and Node.</p>
         </div>
 
         </section>
