portfolio added to projects, minor css changes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,29 @@
 
             <div class="project">
                 <div class="projectImg">
+                    <img src="./images/portfolio.png" alt="Portfolio site">
+                </div>
+                <div class="projectText">
+                    <a href="#">
+                        <h3>Portfolio
+                            <i class="fa fa-external-link" aria-hidden="true"></i>
+                        </h3>
+                    </a>
+                    <p>I used creating this site as an opportunity to learn and practice a few more skills.  Primarily Sass adopting ITCSS and using Grunt as a task runner during development</p>
+                    <div class="skillsContainer">
+                        <div class="skill">HTML</div>
+                        <div class="skill">CSS</div>
+                        <div class="skill">JavaScript</div>
+                        <div class="skill">Sass</div>
+                        <div class="skill">Grunt</div>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="project">
+                <div class="projectImg">
                     <img src="./images/wiki_viewer.png" alt="Wikipedia Viewer">
                 </div>
                 <div class="projectText">
@@ -108,7 +131,7 @@
                         <div class="skill">CSS</div>
                         <div class="skill">JavaScript</div>
                         <div class="skill">jQuery</div>
-                        <div class="skill">APIs</div>
+                        <div class="skill">API</div>
                     </div>
                 </div>
             </div>
