Palette changes. Link button added to project. Minor CSS tweaks

--- a/index.html
+++ b/index.html
@@ -55,29 +55,27 @@
             </div>
         </div>
 
-        <section>
-
-        <div id="aboutme">
+        <div class="aboutme">
             <h2>About me</h2>
             <p>I am a self taught coder and web developer, and have been learning for just over a year.  It started with programming course in Python and has grown from there, using resources such as <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>, <a href="https://www.coursera.org/">Coursera</a> and <a href="https://www.edx.org/">edX</a>.  I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning and utilising skills such as Angular, SASS and Node.</p>
         </div>
 
-        </section>
+        <div class="my-projects">
 
-        <section>
-
-            <h2>My Projects</h2>
+        <h2>My Projects</h2>
 
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/coopers_screen.png" alt="Coopers Cricket Club Website">
-                </div>
-                <div class="projectText">
                     <a href="http://www.cooperscricket.co.uk" target="_blank">
-                        <h3>Ashridge Coopers CC website
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
+                    Visit site
                     </a>
+                </div>
+                
+                <div class="projectText">
+
+                        <h3>Ashridge Coopers CC website</h3>
+                    
                     <p>A website for my local cricket club.  Created using Bootstrap with HTML, CSS and jQuery. Angular was then added to enable easier updating of fixtures and statistics (and because I wanted to use it somewhere!).  Hosted on Digital Ocean using Apache.</p>
                     <div class="skillsContainer">
                         <div class="skill">HTML</div>
@@ -95,13 +93,12 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/portfolio.png" alt="Portfolio site">
+                    <a href="#">
+                    Visit site
+                    </a>
                 </div>
                 <div class="projectText">
-                    <a href="#">
-                        <h3>Portfolio
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
-                    </a>
+                        <h3>Portfolio</h3>
                     <p>I used creating this site as an opportunity to learn and practice a few more skills.  Primarily Sass adopting ITCSS and using Grunt as a task runner during development</p>
                     <div class="skillsContainer">
                         <div class="skill">HTML</div>
@@ -118,13 +115,12 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/wiki_viewer.png" alt="Wikipedia Viewer">
+                    <a href="http://codepen.io/db001/full/dGxavg//" target="_blank">
+                    Visit site
+                    </a>
                 </div>
                 <div class="projectText">
-                    <a href="http://codepen.io/db001/full/dGxavg//" target="_blank">
-                        <h3>Wikipedia Viewer
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
-                    </a>
+                    <h3>Wikipedia Viewer</h3>
                     <p>A project for FreeCodeCamp's Front-end certificate, this app allows the user to search Wikipedia and returns the top ten results.</p>
                     <div class="skillsContainer">
                         <div class="skill">HTML</div>
@@ -141,13 +137,12 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/timestamp.png" alt="Timestamp Microservice">
+                    <a href="https://timestamp-microservice-v987.herokuapp.com/" target="_blank">
+                    Visit site
+                    </a>
                 </div>
                 <div class="projectText">
-                    <a href="https://timestamp-microservice-v987.herokuapp.com/" target="_blank">
-                        <h3>Timestamp Microservice
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
-                    </a>
+                    <h3>Timestamp Microservice</h3>
                     <p>Using Node and Express, this app returns the Unix and Natural timestamps depending on the string passed as a parameter in the URL.</p>
                     <div class="skillsContainer">
                         <div class="skill">Node</div>
@@ -164,13 +159,12 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/starwars.png" alt="Star Wars Top Trumps">
+                    <a href="http://codepen.io/db001/full/BzAmYV/" target="_blank">
+                    Visit site
+                    </a>
                 </div>
                 <div class="projectText">
-                    <a href="http://codepen.io/db001/full/BzAmYV/" target="_blank">
-                        <h3>Star Wars Top Trumps Game
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
-                    </a>
+                   <h3>Star Wars Top Trumps Game</h3>
                     <p>A simple game I created to practice making multiple API calls and using Materialize CSS.</p>
                     <div class="skillsContainer">
                         <div class="skill">HTML</div>
@@ -188,13 +182,12 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/header_parser.png" alt="HTTP Header Parsing Site">
+                    <a href="https://fcc-header-parser-v987.herokuapp.com/" target="_blank">
+                    Visit site
+                    </a>
                 </div>
                 <div class="projectText">
-                    <a href="https://fcc-header-parser-v987.herokuapp.com/" target="_blank">
-                        <h3>HTTP Headers Parsing Website
-                            <i class="fa fa-external-link" aria-hidden="true"></i>
-                        </h3>
-                    </a>
+                    <h3>HTTP Headers Parsing Website</h3>
                     <p>An app that displays the user's operating system, language and IP address. Built as part of FreeCodeCamp's back-end certificate and hosted on Heroku.</p>
                     <div class="skillsContainer">
                         <div class="skill">Node</div>
@@ -202,8 +195,8 @@
                 </div>
             </div>
 
-<!-- End of projects -->
-      </section>
+        <!-- End of projects -->
+      </div>
 
     </body>
     <!-- My scripts -->
