Revert "Footer added, contact email added to about section"
This reverts commit 915cfd191451b9f0c3f3e60fd250538958b70ab2.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
             </div>
         </div>
 
-        <div id="about-link" class="aboutme">
+        <div class="aboutme">
             <h2>About me</h2>
             <p>I am a self taught coder and web developer, and have been learning for just over a year.  It started with programming course in Python and has grown from there, using resources such as <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>, <a href="https://www.coursera.org/">Coursera</a> and <a href="https://www.edx.org/">edX</a>.  I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning and utilising skills such as Angular, SASS and Node.</p>
-            <br>
-            <p>If you would like to get in touch with me, please email me at <span>dave@davebennett.co</span></p>
         </div>
 
-        <div id="projects-link" class="my-projects">
+        <div class="my-projects">
 
         <h2>My Projects</h2>
 
@@ -198,16 +196,6 @@
             </div>
 
         <!-- End of projects -->
-      </div>
-
-      <div id="contacts-link" class="contact">
-
-      </div>
-
-      <div class="footer" aria-label="Navigation buttons">
-          <a href="#" aria-label="Top">Top</a>
-          <a href="#about-link" aria-label="About">About</a>
-          <a href="#projects-link" aria-label="Projects">Projects</a>
       </div>
 
     </body>
