Projects bottom margin fix. Adding contact form

--- a/index.html
+++ b/index.html
@@ -201,13 +201,19 @@
       </div>
 
       <div id="contacts-link" class="contact">
-
+        <form>
+            Name:
+            <input type="text" name="name" placeholder="Name">
+            Email:
+            <input type="text" name="name" placeholder="Email">
+        </form>
       </div>
 
       <div class="footer" aria-label="Navigation buttons">
           <a href="#" aria-label="Top">Top</a>
           <a href="#about-link" aria-label="About">About</a>
           <a href="#projects-link" aria-label="Projects">Projects</a>
+          <a href="#contacts-link" aria-label="Contact">Contact</a>
       </div>
 
     </body>
