--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>About me</h2>
             <p>I am a self taught coder and web developer, and have been learning for just over a year.  It started with programming course in Python and has grown from there, using resources such as <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>, <a href="https://www.coursera.org/">Coursera</a> and <a href="https://www.edx.org/">edX</a>.  I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning and utilising skills such as Angular, SASS and Node.</p>
             <br>
-            <p>If you would like to get in touch with me, please email me at <span>dave@davebennett.co</span></p>
+            <p>If you would like to get in touch with me, please use the contact form below or email me at <span class="reverse">oc.ttennebevad@evad</span></p>
         </div>
 
         <div id="projects-link" class="my-projects">
@@ -202,10 +202,17 @@
 
       <div id="contacts-link" class="contact">
         <form>
-            Name:
+            <div>
+            Name: <br>
             <input type="text" name="name" placeholder="Name">
-            Email:
+            <br>
+            Email: <br>
             <input type="text" name="name" placeholder="Email">
+            </div>
+            Message: <br>
+            <textarea name="message" placeholder="Message"></textarea> 
+            <br>
+            <input type="submit" value="submit">
         </form>
       </div>
 
