--- a/index.html
+++ b/index.html
@@ -201,18 +201,22 @@
       </div>
 
       <div id="contacts-link" class="contact">
-        <form>
+          <h2>Contact me</h2>
+        <form action="https://formspree.io/portfolio@davebennett.co" method="post">
             <div>
             Name: <br>
-            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="name" placeholder="Name" max-length="50" required>
             <br>
             Email: <br>
-            <input type="text" name="name" placeholder="Email">
+            <input type="email" name="_replyto" placeholder="Email" max-length="50" required>
             </div>
+            <div>
             Message: <br>
-            <textarea name="message" placeholder="Message"></textarea> 
+            <textarea name="message" placeholder="Message" max-length="140" required></textarea> 
             <br>
-            <input type="submit" value="submit">
+            <input type="submit" value="Send">
+            (Will take you to an external site)
+            </div>
         </form>
       </div>
 
