New contact form added

--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
         </nav>
         <div class="jumbo">
             <div id="headline">
-                <h2>Front-end Web Development</h2>
+                <h2>Front-end Web Developer</h2>
                 <p>HTML&nbsp;&nbsp;&#149;&nbsp;&nbsp;CSS&nbsp;&nbsp;&#149;  JavaScript&nbsp;&nbsp;&#149;&nbsp;&nbsp;jQuery&nbsp;&nbsp;&#149;&nbsp;&nbsp;Bootstrap</p>
-                <p id="aboutme">I'm a web developer from near Luton in the UK.
-                    <br>
-                  I'm passionate about coding and enjoy creating beautiful, responsive web apps.</p>
+                <p id="aboutme">Web developer from Luton in the UK.</p>
             </div>
         </div>
 
@@ -59,7 +57,7 @@
             <h2>About me</h2>
             <p>I am a self taught coder and web developer, and have been learning for just over a year.  It started with programming course in Python and has grown from there, using resources such as <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>, <a href="https://www.coursera.org/">Coursera</a> and <a href="https://www.edx.org/">edX</a>.  I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning and utilising skills such as Angular, SASS and Node.</p>
             <br>
-            <p>If you would like to get in touch with me, please use the contact form below</p>
+            <p>If you would like to get in touch with me, please use the contact form <a href="#contacts-link" aria-label="Contact">below</a></p>
         </div>
 
         <div id="projects-link" class="my-projects">
@@ -78,7 +76,7 @@
 
                         <h3>Ashridge Coopers CC website</h3>
                     
-                    <p>A website for my local cricket club.  Created using Bootstrap with HTML, CSS and jQuery. Angular was then added to enable easier updating of fixtures and statistics (and because I wanted to use it somewhere!).  Hosted on Digital Ocean using Apache.</p>
+                    <p>A website for my local cricket club.  Created using Bootstrap with HTML, CSS and jQuery. Angular was then added to enable easier updating of fixtures and statistics.  Hosted on Digital Ocean using Apache.</p>
                     <div class="skillsContainer">
                         <div class="skill">HTML</div>
                         <div class="skill">CSS</div>
@@ -202,22 +200,19 @@
 
       <div id="contacts-link" class="contact">
           <h2>Contact me</h2>
-        <form action="https://formspree.io/portfolio@davebennett.co" method="post">
-            <div>
-            Name: <br>
-            <input type="text" name="name" placeholder="Name" max-length="50" required>
-            <br>
-            Email: <br>
-            <input type="email" name="_replyto" placeholder="Email" max-length="50" required>
-            </div>
-            <div>
-            Message: <br>
-            <textarea name="message" placeholder="Message" max-length="140" required></textarea> 
-            <br>
-            <input type="submit" value="Send">
-            (Will take you to an external site)
-            </div>
-        </form>
+
+      <!-- Do not change the code! -->
+      <a id="foxyform_embed_link_869059" href="http://www.foxyform.com/">foxyform</a>
+      <script type="text/javascript">
+      (function(d, t){
+      var g = d.createElement(t),
+        s = d.getElementsByTagName(t)[0];
+      g.src = "http://www.foxyform.com/js.php?id=869059&sec_hash=ce560fb3a1b&width=350px";
+      s.parentNode.insertBefore(g, s);
+      }(document, "script"));
+      </script>
+      <!-- Do not change the code! -->
+
       </div>
 
       <div class="footer" aria-label="Navigation buttons">
