--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
         <!-- Font Awesome -->
-        <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css"
+        <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
      
 
     </head>
