--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/coopers_screen.png" alt="Coopers Cricket Club Website">
-                    <a href="http://www.cooperscricket.co.uk" target="_blank">
+                    <a class="projLink" href="http://www.cooperscricket.co.uk" target="_blank">
                     Visit site
                     </a>
                 </div>
@@ -94,8 +94,32 @@
 
             <div class="project">
                 <div class="projectImg">
+                    <img src="./images/moviefinder.png" alt="Find a film site">
+                    <a class="projLink" href="./movieFinder/index.html" target="_blank">
+                    Visit site
+                    </a>
+                </div>
+                <div class="projectText">
+                        <h3>Movie Finder</h3>
+                    <p>A site that uses the APIs from <a href="https://www.themoviedb.org/" target="_blank">The Movie DB</a> to suggest films based on the users preferences.  I've used this as a way of practising asynchronous API calls</p>
+                    <div class="skillsContainer">
+                        <div class="skill">HTML</div>
+                        <div class="skill">CSS</div>
+                        <div class="skill">JavaScript</div>
+                        <div class="skill">Sass</div>
+                        <div class="skill">Grunt</div>
+                        <div class="skill">API</div>
+                        <div class="skill">jQuery</div>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="project">
+                <div class="projectImg">
                     <img src="./images/portfolio.png" alt="Portfolio site">
-                    <a href="#">
+                    <a class="projLink" href="#">
                     Visit site
                     </a>
                 </div>
@@ -117,7 +141,7 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/wiki_viewer.png" alt="Wikipedia Viewer">
-                    <a href="http://codepen.io/db001/full/dGxavg//" target="_blank">
+                    <a class="projLink" href="http://codepen.io/db001/full/dGxavg//" target="_blank">
                     Visit site
                     </a>
                 </div>
@@ -139,7 +163,7 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/timestamp.png" alt="Timestamp Microservice">
-                    <a href="https://timestamp-microservice-v987.herokuapp.com/" target="_blank">
+                    <a class="projLink" href="https://timestamp-microservice-v987.herokuapp.com/" target="_blank">
                     Visit site
                     </a>
                 </div>
@@ -161,7 +185,7 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/starwars.png" alt="Star Wars Top Trumps">
-                    <a href="http://codepen.io/db001/full/BzAmYV/" target="_blank">
+                    <a class="projLink" href="http://codepen.io/db001/full/BzAmYV/" target="_blank">
                     Visit site
                     </a>
                 </div>
@@ -184,7 +208,7 @@
             <div class="project">
                 <div class="projectImg">
                     <img src="./images/header_parser.png" alt="HTTP Header Parsing Site">
-                    <a href="https://fcc-header-parser-v987.herokuapp.com/" target="_blank">
+                    <a class="projLink" href="https://fcc-header-parser-v987.herokuapp.com/" target="_blank">
                     Visit site
                     </a>
                 </div>
