--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <a href="https://www.freecodecamp.com/">FreeCodeCamp</a>,
             <a href="https://www.coursera.org/">Coursera</a> and
             <a href="https://www.edx.org/">edX</a>. I have a good foundation in HTML, CSS and JavaScript, and am now building on those as well as learning
-            and utilising skills such as Angular, SASS and Node.</p>
+            and utilising skills such as React, Angular and SASS.</p>
+        <br>
+        <p>Recently I've been exploring Node, Express and MongoDB on the back end and can't wait to use them on my next project.</p>
         <br>
         <p>If you would like to get in touch with me, please use the contact form
             <a href="#contacts-link" aria-label="Contact">below</a>
@@ -76,7 +78,7 @@
 
         <div class="project">
             <div class="projectImg">
-                <img src="./images/coopers_screen.png" alt="Louise Lahive">
+                <img src="./images/louise.png" alt="Louise Lahive">
                 <a class="projLink" href="http://www.louiselahive.co.uk" target="_blank">
                     Visit site
                 </a>
